# cuneiform

./: .gitignore  CUNEIFORM_PI_E.md  CUNEIFORM_README.md  CUNEIFORM_README_public_draft.md  LICENSE  README.md  pyproject.toml  requirements.txt
cuneiform/: __init__.py  __main__.py
cuneiform/archaeology/: __init__.py  tablet_analyzer.py  tablet_corpus.py
cuneiform/cas/: __init__.py  ratcalculus.py  ratmatrix.py  ratpoly.py  ratsolve.py  smooth_ring.py
cuneiform/core/: __init__.py  accel.py  display.py  rational.py  sexagesimal.py  smooth.py
cuneiform/crypto/: __init__.py  continued_fractions.py  elliptic.py  lattice.py  post_quantum.py  rsa_analysis.py  scaling.py  side_channel.py  theoretical.py
cuneiform/education/: __init__.py  scribe_mode.py
cuneiform/experiments/: __init__.py  benchmark.py  discovery_log.py  paper_pipeline.py  plimpton_tabulate.py  smooth_density.py  validation.py
cuneiform/finance/: __init__.py  pattern_geometry.py  rational_levels.py  regularity_sr.py
cuneiform/geometry/: __init__.py  constructions.py  laws.py  line.py  point.py  quadrance.py  spread.py  triangle.py
cuneiform/hardware/: __init__.py  sexa_sim.py
cuneiform/math_expansion/: __init__.py  chromogeometry.py  finite_field_geometry.py  padic.py
cuneiform/number_theory/: __init__.py  analysis.py  ecm.py  factor_base.py  primes.py  reciprocals.py  sieve.py  (+2 more)
examples/: exact_geometry.py  factor_race.py  hello_sexa.py  plimpton_extended.py  smooth_analysis.py
ideas/: pi.py  pi_e_expressions.py  random_generator.py
primes/: README.md  factor.py  factor_rsa100.py  factor_rsa2048.py  factor_rsa260.py  factor_rsaANY.py  factor_secp256k1_bitcoin.py  idea.md  semiprime.py
tests/: test_core.py  test_crypto.py  test_geometry.py  test_number_theory.py  test_phase5.py  test_phase6.py  test_phase7.py  test_plimpton.py  test_random.py
(+51 files in other folders)
