[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuneiform"
version = "0.1.0"
description = "Sexagesimal Rational Mathematics Library"
requires-python = ">=3.11"
license = "MIT"

[project.optional-dependencies]
fast = ["gmpy2>=2.1"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["cuneiform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
